[gd_scene load_steps=7 format=3 uid="uid://tqcuoh60t4gj"]

[ext_resource type="Script" path="res://scenes/weapon_1.gd" id="1_xi0ur"]
[ext_resource type="Texture2D" uid="uid://bn2erd6nblcse" path="res://sprites/weapons/weapon_sheets/weapons_sheet.png" id="2_fjfoh"]
[ext_resource type="AudioStream" uid="uid://bqm05c2w5v3ye" path="res://SweetSounds_SFX/WAV/Gun.wav" id="3_3ncuv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_beayh"]
atlas = ExtResource("2_fjfoh")
region = Rect2(31, 80, 31, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_wrhnb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_beayh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_diw6j"]
radius = 230.024

[node name="weapon1" type="Node2D"]
z_index = 1
scale = Vector2(0.6, 0.6)
script = ExtResource("1_xi0ur")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wrhnb")

[node name="shoot_pos" type="Marker2D" parent="."]
position = Vector2(11.6667, 0)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_diw6j")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_3ncuv")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
